--- a/.envrc.example
+++ b/.envrc.example
@@ -12,5 +12,8 @@ export REACT_APP_DEFAULT_NETWORK_NAME=ropsten
 # Enables the features slated for the next public release.  Should be false for production.
 export REACT_APP_NEXT_RELEASE_FEATURE_FLAG=true
 
+# Configures the Sentry DSN
+# export REACT_APP_SENTRY_DSN="https://88ec4c41ade147ab95d38993f81fc134@sentry.io/1389525"
+
 # Configures the Mixpanel app id
 export REACT_APP_MIXPANEL_ID=e5f3a0b990d694b84981f493169f47c4
