--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@fortawesome/free-regular-svg-icons": "^5.4.1",
     "@fortawesome/free-solid-svg-icons": "^5.4.1",
     "@fortawesome/react-fontawesome": "^0.1.3",
+    "@sentry/browser": "^4.5.3",
     "@svgr/webpack": "2.4.1",
     "animated": "^0.2.2",
     "apollo-cache": "^1.1.25",
