--- a/.envrc.example
+++ b/.envrc.example
@@ -17,3 +17,6 @@ export REACT_APP_NEXT_RELEASE_FEATURE_FLAG=true
 
 # Configures the Mixpanel app id
 export REACT_APP_MIXPANEL_ID=e5f3a0b990d694b84981f493169f47c4
+
+# Configures the Google Analytics tracking ID
+# export REACT_APP_GA_TRACKING_ID=<your tracking id>
