--- a/package.json
+++ b/package.json
@@ -103,6 +103,7 @@
     "react-custom-scroll": "^4.0.0",
     "react-dev-utils": "^6.0.5",
     "react-dom": "^16.7.0",
+    "react-ga": "^2.5.7",
     "react-helmet": "^5.2.0",
     "react-router-dom": "^4.3.1",
     "react-router-named-routes": "^0.0.23",
