Added apply-registry to build command

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "main": "index.js",
   "scripts": {
     "test": "eslint src && standard --verbose | snazzy && node scripts/test.js",
-    "build": "node --max-old-space-size=4096 scripts/build.js",
+    "build": "$(npm bin)/apply-registry -o artifacts && node --max-old-space-size=4096 scripts/build.js",
     "start": "node --max-old-space-size=4096 scripts/start.js",
     "apply-registry": "$(npm bin)/apply-registry -o artifacts",
     "reset-local": "rm -rf networks/1234.json && rm -rf build/contracts"
