--- a/package.json
+++ b/package.json
@@ -116,6 +116,7 @@
     "sass-loader": "7.1.0",
     "style-loader": "0.23.0",
     "terser-webpack-plugin": "1.1.0",
+    "timekeeper": "^2.1.2",
     "url-loader": "1.1.1",
     "webpack": "^4.0.0",
     "webpack-dev-server": "3.1.9",
