--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "html-webpack-plugin": "4.0.0-alpha.2",
     "identity-obj-proxy": "3.0.0",
     "immutability-helper": "^2.8.1",
+    "intercom-client": "^2.10.4",
     "jest": "23.6.0",
     "jest-pnp-resolver": "1.0.1",
     "jest-resolve": "23.6.0",
@@ -101,6 +102,7 @@
     "react-async-autocomplete": "^1.1.0",
     "react-content-loader": "^3.4.2",
     "react-copy-to-clipboard": "^5.0.1",
+    "react-country-region-selector": "^1.4.3",
     "react-css-transition-replace": "^3.0.3",
     "react-custom-scroll": "^4.0.0",
     "react-dev-utils": "^6.0.5",
