--- a/package.json
+++ b/package.json
@@ -13,20 +13,64 @@
     "reset-local": "rm -rf networks/1234.json && rm -rf build/contracts"
   },
   "devDependencies": {
+    "@babel/core": "7.1.0",
+    "@svgr/webpack": "2.4.1",
+    "babel-core": "7.0.0-bridge.0",
+    "babel-eslint": "9.0.0",
+    "babel-jest": "23.6.0",
+    "babel-loader": "8.0.4",
     "babel-plugin-inline-react-svg": "^1.0.1",
+    "babel-plugin-named-asset-import": "^0.2.2",
     "babel-plugin-root-import": "^6.1.0",
+    "babel-preset-react-app": "^5.0.4",
+    "case-sensitive-paths-webpack-plugin": "2.1.2",
+    "copy-webpack-plugin": "^4.5.4",
+    "css-loader": "1.0.0",
+    "debug": "^4.1.0",
+    "dotenv": "6.0.0",
+    "dotenv-expand": "4.2.0",
     "enzyme": "^3.8.0",
     "enzyme-adapter-react-16": "^1.7.1",
+    "eslint": "5.6.0",
+    "eslint-config-react-app": "^3.0.4",
+    "eslint-loader": "2.1.1",
+    "eslint-plugin-flowtype": "2.50.1",
+    "eslint-plugin-import": "2.14.0",
+    "eslint-plugin-jsx-a11y": "6.1.2",
+    "eslint-plugin-react": "7.11.1",
+    "file-loader": "2.0.0",
+    "fs-extra": "7.0.0",
+    "html-webpack-plugin": "4.0.0-alpha.2",
+    "jest": "23.6.0",
+    "jest-pnp-resolver": "1.0.1",
+    "jest-resolve": "23.6.0",
     "jsdom": "^13.0.0",
+    "mini-css-extract-plugin": "0.4.3",
+    "node-sass": "^4.9.4",
+    "optimize-css-assets-webpack-plugin": "5.0.1",
+    "pnp-webpack-plugin": "1.1.0",
+    "postcss-flexbugs-fixes": "4.1.0",
+    "postcss-loader": "3.0.0",
+    "postcss-preset-env": "6.0.6",
+    "postcss-safe-parser": "4.0.1",
+    "react-dev-utils": "^6.0.5",
     "react-hot-loader": "^4.3.11",
+    "sass-loader": "7.1.0",
     "snazzy": "^8.0.0",
     "standard": "^12.0.1",
-    "truffle-deploy-registry": "^0.5.1"
+    "style-loader": "0.23.0",
+    "terser-webpack-plugin": "1.1.0",
+    "timekeeper": "^2.1.2",
+    "truffle-deploy-registry": "^0.5.1",
+    "url-loader": "1.1.1",
+    "webpack": "^4.0.0",
+    "webpack-dev-server": "3.1.9",
+    "webpack-manifest-plugin": "2.0.4",
+    "workbox-webpack-plugin": "3.6.2"
   },
   "dependencies": {
     "@ant-design/icons": "^1.1.15",
     "@ant-design/icons-react": "^1.1.2",
-    "@babel/core": "7.1.0",
     "@download/blockies": "^1.0.3",
     "@fortawesome/fontawesome-svg-core": "^1.2.6",
     "@fortawesome/free-brands-svg-icons": "^5.4.1",
@@ -34,7 +78,6 @@
     "@fortawesome/free-solid-svg-icons": "^5.4.1",
     "@fortawesome/react-fontawesome": "^0.1.3",
     "@sentry/browser": "^4.5.3",
-    "@svgr/webpack": "2.4.1",
     "animated": "^0.2.2",
     "apollo-cache": "^1.1.25",
     "apollo-cache-inmemory": "^1.4.2",
@@ -44,57 +87,24 @@
     "apollo-link-ethereum-resolver-ethersjs": "0.0.24",
     "apollo-link-state": "^0.4.2",
     "apollo-refetch-queries": "^0.0.3",
-    "babel-core": "7.0.0-bridge.0",
-    "babel-eslint": "9.0.0",
-    "babel-jest": "23.6.0",
-    "babel-loader": "8.0.4",
-    "babel-plugin-named-asset-import": "^0.2.2",
-    "babel-preset-react-app": "^5.0.4",
     "bfj": "^6.1.1",
     "bn.js": "4.11.8",
     "bulma": "^0.7.2",
     "canvas": "^2.3.1",
-    "case-sensitive-paths-webpack-plugin": "2.1.2",
     "chalk": "2.4.1",
     "classnames": "^2.2.6",
-    "copy-webpack-plugin": "^4.5.4",
-    "css-loader": "1.0.0",
     "date-fns": "^2.0.0-alpha.27",
-    "debug": "^4.1.0",
-    "dotenv": "6.0.0",
-    "dotenv-expand": "4.2.0",
-    "eslint": "5.6.0",
-    "eslint-config-react-app": "^3.0.4",
-    "eslint-loader": "2.1.1",
-    "eslint-plugin-flowtype": "2.50.1",
-    "eslint-plugin-import": "2.14.0",
-    "eslint-plugin-jsx-a11y": "6.1.2",
-    "eslint-plugin-react": "7.11.1",
     "ethers": "^4.0.23",
-    "file-loader": "2.0.0",
-    "fs-extra": "7.0.0",
     "graphql": "^14.0.2",
     "graphql-anywhere": "^4.1.27",
     "graphql-tag": "^2.10.0",
-    "html-webpack-plugin": "4.0.0-alpha.2",
     "identity-obj-proxy": "3.0.0",
     "immutability-helper": "^2.8.1",
     "intercom-client": "^2.10.4",
-    "jest": "23.6.0",
-    "jest-pnp-resolver": "1.0.1",
-    "jest-resolve": "23.6.0",
     "lodash": "^4.17.11",
-    "mini-css-extract-plugin": "0.4.3",
     "mixpanel-browser": "^2.26.0",
-    "node-sass": "^4.9.4",
     "object-assign": "^4.1.1",
-    "optimize-css-assets-webpack-plugin": "5.0.1",
     "parse-github-url": "^1.0.2",
-    "pnp-webpack-plugin": "1.1.0",
-    "postcss-flexbugs-fixes": "4.1.0",
-    "postcss-loader": "3.0.0",
-    "postcss-preset-env": "6.0.6",
-    "postcss-safe-parser": "4.0.1",
     "prop-types": "^15.6.2",
     "qs": "^6.6.0",
     "react": "^16.7.0",
@@ -106,7 +116,6 @@
     "react-country-region-selector": "^1.4.3",
     "react-css-transition-replace": "^3.0.3",
     "react-custom-scroll": "^4.0.0",
-    "react-dev-utils": "^6.0.5",
     "react-dom": "^16.7.0",
     "react-ga": "^2.5.7",
     "react-helmet": "^5.2.0",
@@ -116,15 +125,6 @@
     "react-tooltip": "^3.9.0",
     "react-transition-group": "^2.5.3",
     "resolve": "1.8.1",
-    "sass-loader": "7.1.0",
-    "style-loader": "0.23.0",
-    "terser-webpack-plugin": "1.1.0",
-    "timekeeper": "^2.1.2",
-    "url-loader": "1.1.1",
-    "webpack": "^4.0.0",
-    "webpack-dev-server": "3.1.9",
-    "webpack-manifest-plugin": "2.0.4",
-    "workbox-webpack-plugin": "3.6.2",
     "yn": "^3.0.0"
   },
   "standard": {
